\name{NEWS}
\title{NEWS file for the gridSVG package}
\encoding{UTF-8}

\section{Changes in version 1.7-4}{
  \itemize{
    \item Fix in \code{feColorMatrix()} for \dQuote{length > 1 in
      coercion to logical} error.  Thanks to CRAN testing and Brian Ripley!
  }
}
\section{Changes in version 1.7-3}{
  \itemize{
    \item Internal implementation change to avoid assigning values
    into baseenv.
  }
}
\section{Changes in version 1.7-2}{
  \itemize{
    \item Simpler and better transformations for exported
    SVG <image> elements.

    \item Better protection against \code{NA} values in labels
    in text grobs.  Reported by Daniel Barnett.
  }
}
\section{Changes in version 1.7-1}{
  \itemize{
    \item Fix for evaluation of arguments passed to \code{pdf()}
    device within \code{gridsvg()}.

    Patch provided by Philipp Angerer.

    \item Avoid peeking at internal representation of \pkg{grid} units.
  }  
}
\section{Changes in version 1.7-0}{
  \itemize{
    \item Update for addition of \code{pathId} argument in
    \code{grid.path}.
  }
}
\section{Changes in version 1.6-1}{
  \itemize{
    \item Additional fix for \code{pch=NA}
  }
}
\section{Changes in version 1.6-0}{
  \itemize{
    \item Generation of SVG from \code{grid.export()} is now much faster
    (when you are drawing many rectangles, points, circles, or lines).
  }
}
\section{Changes in version 1.5-1}{
  \itemize{
    \item Fix to ensure that \code{r} attribute in radial gradients
    is non-negative.
    
    \item Fix for strict attribute checking now includes presentation
    attributes.
    
    \item Fix for \pkg{gtable} support when grob in table cell has
    viewport with non-centering alignment (e.g., a \pkg{ggplot2}
    plot with more than one legend).  Reported by Tauno Metsalu.

    \item Switched JSON library from \pkg{RJSONIO} to \pkg{jsonlite}.
    \pkg{gridSVG} no longer needs to compile C code as it can import
    a base64 encoding method from \pkg{jsonlite}.
