@@ -1,6 +1,6 @@
 Package: gridSVG
 Title: Export 'grid' Graphics as SVG
-Version: 1.7-4
+Version: 1.7-5
 Authors@R: c(person("Paul", "Murrell", role = c("cre", "aut"),
                     email = "paul@stat.auckland.ac.nz"),
              person("Simon", "Potter", role = "aut",
