@@ -81,6 +81,7 @@ export("primToDev")
 export("animate")
 export("garnish")
 
+S3method("grobToDev", "default")
 S3method("grobToDev", "grob")
 S3method("grobToDev", "gTree")
 S3method("grobToDev", "recordedGrob")
@@ -98,6 +99,7 @@ S3method("primToDev", "clip")
 S3method("primToDev", "move.to")
 S3method("primToDev", "line.to")
 S3method("primToDev", "lines")
+S3method("primToDev", "polyline")
 S3method("primToDev", "rastergrob")
 S3method("primToDev", "rect")
 S3method("primToDev", "segments")
