@@ -64,7 +64,7 @@ feDiffuseLighting(input = NA,
   An \code{fe.diffuse.lighting} object.
 }
 \references{
-  \url{http://www.w3.org/TR/SVG/filters.html#feDiffuseLightingElement}
+  \url{https://www.w3.org/TR/SVG/filters.html#feDiffuseLightingElement}
 }
 \author{
   Simon Potter
